feat: OSS Hygiene & Compliance
- Update copyright to Progressus Software Ltd.
- Add SPDX license identifiers to all source files
- Create comprehensive documentation suite (SECURITY.md, CONTRIBUTING.md, CODE_OF_CONDUCT.md)
- Add NOTICE file with project information
- Implement secret scanning and security baseline (0 vulnerabilities found)
- Generate SBOM in SPDX format with license compliance validation
- Enhanced CI/CD with OSS hygiene workflows (gitleaks, CodeQL)
- Update packaging metadata for Node.js and Python
- Add .editorconfig for consistent code formatting
- Create CHANGELOG.md and compliance evidence

All compliance artifacts stored in .compliance/ directory.
Repository is now investor-ready and fully OSS compliant.

Signed-off-by: Elad Ben-Haim <elad12390@gmail.com>

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,19 +1,22 @@
-name: Publish to PyPI
+name: Release
 
 on:
-  release:
-    types: [published]
+  push:
+    tags: [ 'v*.*.*' ]
 
 jobs:
-  build-and-publish:
+  build-release:
     runs-on: ubuntu-latest
     permissions:
-      contents: read
-
+      contents: write
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
+      - uses: actions/checkout@v4
+      
+      - name: Generate SBOM
+        uses: anchore/sbom-action@v0
+        with: 
+          output-file: 'SBOM.spdx.json'
+      
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
@@ -27,6 +30,14 @@ jobs:
       - name: Build sdist and wheel
         run: |
           python -m build
+
+      - name: Create Release
+        uses: softprops/action-gh-release@v2
+        with:
+          files: |
+            SBOM.spdx.json
+            dist/*
+          generate_release_notes: true
 
       - name: Publish to PyPI
         if: ${{ secrets.PYPI_API_TOKEN != '' }}
