--- a/package.json
+++ b/package.json
@@ -2,12 +2,21 @@
   "name": "gemini-vision-mcp-server",
   "version": "1.0.0",
   "description": "MCP server for image analysis using Gemini 2.5 Pro through OpenRouter",
-  "main": "src/index.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "type": "module",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js"
+    }
+  },
   "scripts": {
     "dev": "tsx src/index.ts",
-    "start": "tsx src/index.ts",
-    "build": "tsc -p tsconfig.json"
+    "start": "node dist/index.js",
+    "build": "tsc -p tsconfig.json",
+    "lint": "eslint src/**/*.ts",
+    "typecheck": "tsc --noEmit"
   },
   "keywords": [
     "mcp",
@@ -17,8 +26,17 @@
     "image-analysis",
     "openrouter"
   ],
-  "author": "Your Name",
+  "author": "Progressus Software Ltd.",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/stanley-marketing/gemini-vision-mcp.git"
+  },
+  "bugs": {
+    "url": "https://github.com/stanley-marketing/gemini-vision-mcp/issues"
+  },
+  "homepage": "https://github.com/stanley-marketing/gemini-vision-mcp#readme",
+  "sideEffects": false,
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.17.2",
     "axios": "^1.6.0",
