--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,10 @@ name = "gemini-vision-mcp"
 version = "1.0.0"
 description = "MCP server for image analysis using Gemini 2.5 Pro through OpenRouter"
 authors = [
-    {name = "Your Name", email = "your.email@example.com"}
+    {name = "Progressus Software Ltd.", email = "oss@progressus-software.com"}
+]
+maintainers = [
+    {name = "Progressus Software Ltd.", email = "oss@progressus-software.com"}
 ]
 readme = "README.md"
 license = {text = "MIT"}
@@ -43,9 +46,11 @@ dev = [
 gemini-vision-mcp = "gemini_vision.server:main"
 
 [project.urls]
-Homepage = "https://github.com/your-username/gemini-vision-mcp"
-Repository = "https://github.com/your-username/gemini-vision-mcp"
-Issues = "https://github.com/your-username/gemini-vision-mcp/issues"
+Homepage = "https://github.com/stanley-marketing/gemini-vision-mcp"
+Repository = "https://github.com/stanley-marketing/gemini-vision-mcp"
+Issues = "https://github.com/stanley-marketing/gemini-vision-mcp/issues"
+Documentation = "https://github.com/stanley-marketing/gemini-vision-mcp#readme"
+"Source Code" = "https://github.com/stanley-marketing/gemini-vision-mcp"
 
 [tool.setuptools.packages.find]
 where = ["src"]
